--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".domain.services.DataService"
+            android:enabled="true"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
